Fixed banner cutoff issue.

--- a/pycon/static/less/responsive-site.less
+++ b/pycon/static/less/responsive-site.less
@@ -185,17 +185,54 @@ body.home {
 	}
 	@media (max-width: @breakDesktopXLS) {
 		.banner {
-			min-height: 505px;
+		    background: url("../img/headergraphic.png") no-repeat center 100px;
+		    -webkit-background-size: contain;
+		    -moz-background-size: contain;
+		    -o-background-size: contain;
+		    background-size: contain;
+		    max-width: 100%;
+		    min-height: 550px;
+		    padding-top: 10px;
+		    z-index: -1;
 		}
 	}
 	@media (max-width: @breakDesktopLarge) {
 		.banner {
-			min-height: 440px;
+		    background: url("../img/headergraphic.png") no-repeat center 60px;
+		    -webkit-background-size: contain;
+		    -moz-background-size: contain;
+		    -o-background-size: contain;
+		    background-size: contain;
+		    max-width: 100%;
+		    min-height: 440px;
+		    padding-top: 10px;
+		    z-index: -1;
+		}
+	}
+	@media (max-width: @breakDesktop) {
+		.banner {
+		    background: url("../img/headergraphic.png") no-repeat center 100px;
+		    -webkit-background-size: contain;
+		    -moz-background-size: contain;
+		    -o-background-size: contain;
+		    background-size: contain;
+		    max-width: 100%;
+		    min-height: 440px;
+		    padding-top: 10px;
+		    z-index: -1;
 		}
 	}
 	@media (max-width: @breakTablet) {
 		.banner {
-			min-height: 300px;
+			background: url("../img/headergraphic.png") no-repeat center 50px;
+		    -webkit-background-size: contain;
+		    -moz-background-size: contain;
+		    -o-background-size: contain;
+		    background-size: contain;
+		    max-width: 100%;
+		    min-height: 300px;
+		    padding-top: 10px;
+		    z-index: -1;
 	    	.logo {
 	    		background:url(../img/pycon2015-logo_sub.png) no-repeat 0 0;
 	    		background-size: 300px auto;
